let kw added to parser.yy, ast/ .cpp-.h files prepared (keyword.h will be filled along the way) ongoing progress with parser.yy, many files reforamtted, cmakelist updated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,7 @@ add_library(kiraz STATIC
 
     kiraz/Token.h
     kiraz/Token.cpp
+
     kiraz/token/Literal.h
     kiraz/token/Literal.cpp
     kiraz/token/Operator.h
@@ -113,11 +114,15 @@ add_library(kiraz STATIC
     kiraz/Node.h
     kiraz/Node.cpp
 
-    kiraz/ast/Operator.h
-    kiraz/ast/Operator.cpp
-
     kiraz/ast/Literal.h
     kiraz/ast/Literal.cpp
+    kiraz/ast/Operator.h
+    kiraz/ast/Operator.cpp
+    kiraz/ast/Identifier.h
+    kiraz/ast/Identifier.cpp
+    kiraz/ast/Keyword.h
+    kiraz/ast/Keyword.cpp  
+
 
     main.h
     ${BISON_PARSER_OUTPUTS}
