macros defined under Compiler.cpp, built-ins get written to symtab automatically at the beginning, compute_stmt_type overriden for operators under ast/, updated FuncArgList logic at Keyword.h and parser.yy for macro compatibility, Identifier creation structure also modified for macros, some little changes on placement of some classes, hw2 tests not working yet...

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,11 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "cassert": "cpp"
+        "cassert": "cpp",
+        "regex": "cpp",
+        "variant": "cpp"
+    },
+    "[cpp]": {
+        "editor.defaultFormatter": "ms-vscode.cpptools"
     }
 }
